--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="navbar bg-base-100 shadow-sm mt-4 rounded-lg flex justify-between">
 
-            <div class="flex justify-center items-center text-xl">
+            <div class="flex justify-center items-center text-3xl">
                 <img src="assets/logo.png" alt="">
                 <a href="">Dev <span class="font-bold">Board</span>
                 </a>
@@ -84,20 +84,20 @@
                     </div>
                 </div>
 
-                <div class="grid grid-cols-2 gap-4 p-4">
-                    <div class="bg-blue-200 p-6  rounded-lg">
+                <div class="grid grid-cols-2  gap-11 p-4">
+                    <div class="bg-blue-200 p-6 h-72 rounded-lg space-y-4">
                         <div class="w-20 h-8 bg-slate-100 rounded-lg text-center">
 
                             ShopEase
 
                         </div>
-                        <div class="text-xl font-medium text-slate-700 mt-2">
+                        <div class="text-xl font-medium text-slate-700 ">
                             Fix Mobile Button Issue
                         </div>
-                        <div class="w-56 h-14 mt-2 bg-slate-100 rounded-lg text-center text-base">
+                        <div class="w-56 h-14  bg-slate-100 rounded-lg text-center text-base">
                             Debug using Chrome DevTools, check for overlapping _
                         </div>
-                        <div class="flex justify-between mt-2">
+                        <div class="flex justify-between ">
                             <div>
                                 <p>Deadline</p>
                                 <h1 class="font-semibold">02 March 2025</h1>
@@ -109,19 +109,19 @@
                         </div>
 
                     </div>
-                    <div class="bg-blue-200 p-6  rounded-lg">
+                    <div class="bg-blue-200 p-6 h-72 rounded-lg space-y-4">
                         <div class="w-20 h-8 bg-slate-100 rounded-lg text-center">
 
-                            ShopEase
+                            CloudSync 
 
                         </div>
-                        <div class="text-xl font-medium text-slate-700 mt-2">
-                            Fix Mobile Button Issue
+                        <div class="text-xl font-medium text-slate-700 ">
+                            Add Dark Mode
                         </div>
-                        <div class="w-56 h-14 mt-2 bg-slate-100 rounded-lg text-center text-base">
+                        <div class="w-56 h-14  bg-slate-100 rounded-lg text-center text-base">
                             Debug using Chrome DevTools, check for overlapping _
                         </div>
-                        <div class="flex justify-between mt-2">
+                        <div class="flex justify-between ">
                             <div>
                                 <p>Deadline</p>
                                 <h1 class="font-semibold">02 March 2025</h1>
@@ -133,19 +133,19 @@
                         </div>
 
                     </div>
-                    <div class="bg-blue-200 p-6  rounded-lg">
+                    <div class="bg-blue-200 p-6 h-72  rounded-lg space-y-4">
                         <div class="w-20 h-8 bg-slate-100 rounded-lg text-center">
 
-                            ShopEase
+                            SwiftPay
 
                         </div>
-                        <div class="text-xl font-medium text-slate-700 mt-2">
-                            Fix Mobile Button Issue
+                        <div class="text-xl font-medium text-slate-700 ">
+                            Optimize Home page
                         </div>
-                        <div class="w-56 h-14 mt-2 bg-slate-100 rounded-lg text-center text-base">
+                        <div class="w-56 h-14  bg-slate-100 rounded-lg text-center text-base">
                             Debug using Chrome DevTools, check for overlapping _
                         </div>
-                        <div class="flex justify-between mt-2">
+                        <div class="flex justify-between ">
                             <div>
                                 <p>Deadline</p>
                                 <h1 class="font-semibold">02 March 2025</h1>
@@ -157,19 +157,19 @@
                         </div>
 
                     </div>
-                    <div class="bg-blue-200 p-6  rounded-lg">
+                    <div class="bg-blue-200 p-6 h-72  rounded-lg space-y-4">
                         <div class="w-20 h-8 bg-slate-100 rounded-lg text-center">
 
-                            ShopEase
+                            Meta
 
                         </div>
-                        <div class="text-xl font-medium text-slate-700 mt-2">
-                            Fix Mobile Button Issue
+                        <div class="text-xl font-medium text-slate-700">
+                            Add new emoji 
                         </div>
-                        <div class="w-56 h-14 mt-2 bg-slate-100 rounded-lg text-center text-base">
+                        <div class="w-56 h-14  bg-slate-100 rounded-lg text-center text-base">
                             Debug using Chrome DevTools, check for overlapping _
                         </div>
-                        <div class="flex justify-between mt-2">
+                        <div class="flex justify-between ">
                             <div>
                                 <p>Deadline</p>
                                 <h1 class="font-semibold">02 March 2025</h1>
@@ -181,19 +181,19 @@
                         </div>
 
                     </div>
-                    <div class="bg-blue-200 p-6  rounded-lg">
-                        <div class="w-20 h-8 bg-slate-100 rounded-lg text-center">
+                    <div class="bg-blue-200 p-6 h-72   rounded-lg space-y-4">
+                        <div class="w-24 h-8 bg-slate-100 rounded-lg text-center">
 
-                            ShopEase
+                            Google LLC
 
                         </div>
-                        <div class="text-xl font-medium text-slate-700 mt-2">
-                            Fix Mobile Button Issue
+                        <div class="text-xl font-medium text-slate-700 ">
+                            Integrate OpenAI API 
                         </div>
-                        <div class="w-56 h-14 mt-2 bg-slate-100 rounded-lg text-center text-base">
+                        <div class="w-56 h-14  bg-slate-100 rounded-lg text-center text-base">
                             Debug using Chrome DevTools, check for overlapping _
                         </div>
-                        <div class="flex justify-between mt-2">
+                        <div class="flex justify-between">
                             <div>
                                 <p>Deadline</p>
                                 <h1 class="font-semibold">02 March 2025</h1>
@@ -205,19 +205,19 @@
                         </div>
 
                     </div>
-                    <div class="bg-blue-200 p-6  rounded-lg">
+                    <div class="bg-blue-200 p-6 h-72   rounded-lg space-y-4">
                         <div class="w-20 h-8 bg-slate-100 rounded-lg text-center">
 
-                            ShopEase
+                            Glassdoar
 
                         </div>
-                        <div class="text-xl font-medium text-slate-700 mt-2">
-                            Fix Mobile Button Issue
+                        <div class="text-xl font-medium text-slate-700">
+                            Improve Job searching 
                         </div>
-                        <div class="w-56 h-14 mt-2 bg-slate-100 rounded-lg text-center text-base">
+                        <div class="w-56 h-14  bg-slate-100 rounded-lg text-center text-base">
                             Debug using Chrome DevTools, check for overlapping _
                         </div>
-                        <div class="flex justify-between mt-2">
+                        <div class="flex justify-between">
                             <div>
                                 <p>Deadline</p>
                                 <h1 class="font-semibold">02 March 2025</h1>
@@ -232,7 +232,20 @@
                 </div>
 
             </div>
-            <div class="col-span-1 bg-red-400 p-4 text-white">
+            <div class="col-span-1 flex flex-col items-center bg-red-400 p-4 text-white">
+                <div class="space-y-4">
+                    <div class="flex">
+                        <img src="assets/activity.png" alt="">
+                        <p class="text-xl text-slate-800">Activity log</p>
+
+                    </div>
+                    <div>
+                        <button class="btn btn-primary">Clear History</button>
+
+                    </div>
+                </div>
+                <div class="divider"></div>
+
 
             </div>
         </div>
