--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Assignment-5</title>
 </head>
 
-<body class="container mx-auto bg-slate-500">
+<body id="body-color" class="container mx-auto ">
     <header>
         <div class="navbar bg-base-100 shadow-sm mt-4 rounded-lg flex justify-between">
 
@@ -33,9 +33,9 @@
                         23
                     </div>
                 </div>
-                <div>
+                <button id="random-color">
                     <img src="assets/theme-btn.png" alt="">
-                </div>
+                </button>
 
             </div>
 
@@ -78,8 +78,8 @@
                             <img src="assets/calender.png" alt="">
                         </div>
                         <div class=" text-md ">
-                            <p>Wed,</p>
-                            <h1 class=" font-bold">Feb 28 2025</h1>
+                             <p id="date-show"></p>
+                            
                         </div>
                     </div>
                 </div>
@@ -232,7 +232,7 @@
                 </div>
 
             </div>
-            <div class="col-span-1 flex flex-col space-y-4 items-center bg-red-400 lg:p-4 text-white">
+            <div class="col-span-1 flex flex-col space-y-4 items-center bg-blue-200 lg:p-4 text-white">
 
                 <div class="flex">
                     <img src="assets/activity.png" alt="">
