--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Assignment-5</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 
 
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
-    <title>Assignment-5</title>
+
 </head>
 
 <body id="body-color" class="container mx-auto ">
@@ -61,8 +61,7 @@
                     </div>
 
 
-                    <div
-                        class="lg:col-span-2 bg-linear-to-t from-sky-500 to-indigo-500 p-4 rounded-lg flex items-center gap-3">
+                    <div id="newtoday-section" class="lg:col-span-2 bg-linear-to-t from-sky-500 to-indigo-500 p-4 rounded-lg flex items-center gap-3">
                         <div>
                             <img src="assets/board.png" alt="">
                         </div>
@@ -78,8 +77,8 @@
                             <img src="assets/calender.png" alt="">
                         </div>
                         <div class=" text-md ">
-                             <p id="date-show"></p>
-                            
+                            <p id="date-show"></p>
+
                         </div>
                     </div>
                 </div>
@@ -91,14 +90,14 @@
                             ShopEase
 
                         </div>
-                        <div id="card1-title"  class="text-xl font-medium text-slate-700 ">
+                        <div id="card1-title" class="text-xl font-medium text-slate-700 ">
                             Fix Mobile Button Issue
                         </div>
                         <div class="w-56 h-14  bg-slate-100 rounded-lg text-center text-base">
                             Debug using Chrome DevTools, check for overlapping _
                         </div>
                         <div class="flex justify-between gap-1 ">
-                            <div >
+                            <div>
                                 <p>Deadline</p>
                                 <h1 class="font-semibold">02 March 2025</h1>
 
